# C2ModRegistry

./: .gitignore  README.md  build_package_list.py  models.py  pyproject.toml
.github/ISSUE_TEMPLATE/: add-package-to-registry.md  add-release-to-registry.md
.github/workflows/: add-release-from-issue.yml  pull-request-ci.yml  sync-to-db-branch.yml  validate-and-sync-to-db-branch.yml  zero-infra-mod-registry.code-workspace
.github/workflows/scripts/: extract-issue-json-body.sh  run-package-manager.sh
package_db/: mod_list_index.txt
registry/: ARoese.txt  Chiv2-Community.txt  Jacoby6000.txt  Knutschbert.txt
registry/Chiv2-Community/: FilthyPeasants.txt
registry/redirects/: Chiv2-Community.txt
src/c2modregistry/: __init__.py  hashes.py  main.py  mod_metadata.py  models.py  package_list.py
