[tool.poetry]
name = "c2modregistry"
version = "0.1.0"
description = ""
authors = ["Jacob Barber <jacoby6000@gmail.com>"]
readme = "README.md"
packages = [{include = "c2modregistry", from="src/"}]

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^2.5.0"
requests = "^2.31.0"
types-requests = "^2.31.0.2"
argparse = "^1.4.0"
types-urllib3 = "^1.26.25.14"
urllib3 = "^2.0.4"
semantic-version = "^2.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
